--- a/updater.ipynb
+++ b/updater.ipynb
@@ -50,9 +50,9 @@
     "    \"\"\"\n",
     "    if request.method == 'POST':\n",
     "        data = request.json\n",
-    "        # docs are jsons!!!\n",
     "        docs = data[\"docs\"]\n",
-    "        textes = [item['text'] for item in docs]\n",
+    "        # add title text to textes\n",
+    "        textes = [item['title'] + ' ' + item['text'] for item in docs]\n",
     "        analyze_json = {'textes': textes}\n",
     "        r_analyzing_docs = post_request(ANALYZER_PORT, ANALYZER_PATH, analyze_json)\n",
     "        stemmed_docs = r_analyzing_docs['stemmed_docs']\n",
